# simple_replacement

./: pyproject.toml
resources/: cheater.txt  small_list.txt
simple_substitution/: main.py  make_replacements.py  possibilities.py
tests/: test_main.py  test_make_replacement.py  test_possibilities.py  test_simple_substitution.py
