[tool.poetry]
name = "simple-substitution"
version = "0.1.0"
description = ""
authors = ["Lee-Roy King <leeroywking@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-watch = "^4.2.0"
pytest-cov = "^2.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
